syntax = "proto3";

package cqrs;

option optimize_for = SPEED;

message CommandEnvelopeProto {
    string id = 1;
    int64 timestamp = 2;
    string serviceId = 3;
    int32 serviceInstanceId = 4;
    string transactionId = 5;

    int32 version = 6;
    string type = 7;
    string subject = 8;

    bytes command = 11;
}

message CommandResponseEnvelopeProto {
    string transactionId = 1;
    string commandId = 2;
    int64 timestamp = 3;
    string serviceId = 4;
    optional string type = 5;
    optional int32 version = 6;
    bytes response = 7;
    string id = 9;
}

message DomainEventEnvelopeProto {
    string id = 1;
    string transactionId = 2;
    int64 timestamp = 3;
    string type = 4;
    int32 version = 5;
    StreamInfoProto streamInfo = 6;
    bytes event = 7;
    string partitionKey = 8;
    string producingServiceId = 10;
    string producingServiceVersion = 11;
}

message StreamInfoProto {
    string id = 1;
    string entityType = 2;
}
